--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>My favorite Animal</h1>
     <h2>I love DOGS!</h2>
+    <img src="https://res.heraldm.com/phpwas/restmb_idxmake.php?idx=142&simg=%2Fcontent%2Fimage%2F2018%2F10%2F02%2F20181002000713_0.jpg" alt=kakaotalk >
 </body>
 </html>
